
1.40 (2008/mm/dd)
http://trac.transmissionbt.com/query?group=component&milestone=1.40
- All Platforms
   + Rewritten bandwidth management code
   + Lazy bitfields (always on)
   + Support compression when serving Web Interface content and RPC responses
   + Simplify the RPC whitelist
- Mac
   + Option to automatically update the blocklist weekly
   + Sparkle updated to 1.5
- GTK+
   + Option to automatically update the blocklist weekly
   + Added off-hour bandwidth scheduling
- Web Client
   + The Web Client is now out of beta
   + Minor display fixes
   + On iPhone/iPod touch, launching from the home screen will hide the address bar

1.34 (2008/09/16)
http://trac.transmissionbt.com/query?group=component&milestone=1.34
- All Clients
   + Don't reconnect too frequently to the same peer
   + Webseed bugfix
   + Fix bug that caused some transfers to not be scraped
   + Fix BSD build issues
   + Handle OpenTracker's `downloaded' key in announce responses
- Mac
   + Fix memory leak when updating blocklist
   + Connect to the web interface when the application's path contains a space
+ GTK+
   + Minor display fixes
   + 15 updated translations + 1 new language
+ Daemon+
   + Minor display fixes
- Web Client
   + Minor display fixes
- CLI:
   + Fix crash when creating a torrent file

1.33 (2008/08/30)
http://trac.transmissionbt.com/query?group=component&milestone=1.33
- All Platforms
   + Fix crash from malicious torrent files with a piece size of zero
   + When creating new torrent files, change behavior that caused 
     "Multi tracker torrents are not allowed" warning on one tracker
   + Fix Unicode handling in the JSON parser/generator
   + Fix memory error when reading KTorrent's PEX messages
   + Fix small memory leaks
- Mac
   + Rephrase "data not fully available" to "remaining time unknown"
   + Fix bug where torrent file creation would fail because an extra blank tracker address was inserted
- Daemon